apps/yamtrack/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yamtrack
  labels:
    app.kubernetes.io/name: yamtrack
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yamtrack
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
